# pyspqr

./: .gitignore  Makefile  README.rst  _pyspqr.c  _suitesparseqr.c  pyproject.toml  setup.py  suitesparseqr.c  suitesparseqr.py  temp.py  test.py
.github/workflows/: cibuildwheel.yml  test.yml
pyspqr/: __init__.py  pyspqr.py  test.py  test_extension.py
pyspqr/tests/: __init__.py  test_extension.py  test_pyspqr.py
suitesparseqr/: __init__.py  suitesparseqr.py  test.py
