[project]
name = "pyspqr"
version = "0.0.1"
description = "Python bindings for SuiteSparseQR."
license = {text = "GPLv3"}
readme = "README.rst"
authors = [{name = "Enzo Busseti"}]
maintainers = [{name = "Enzo Busseti", email = "enzo.busseti@gmail.com"}]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["build", "twine", "auditwheel", "rstcheck", "wheel", "abi3audit"]

[build-system]
requires = ["setuptools", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/enzbus/pyspqr"



[tool.cibuildwheel]
skip = [
  "pp*", # Disable building PyPy wheels on all platforms
  "*-win32", 
  "cp36*",
  "cp37*",
  "cp38*musllinux*", # doesn't install, Scipy seems to be broken
  "*musllinux*aarch64*" # no Scipy wheels for this
]
test-command = [
  "echo wheel installed successfully",
  "python -m pyspqr.test"
]
# we use the newer image for aarch64, for this there are openblas dev libraries
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = [
  "x86_64",
  "aarch64",
]

[tool.cibuildwheel.windows]
# This will probably become default in newer cibuildwheels versions
repair-wheel-command = [
  "pip install delvewheel",
  "delvewheel repair -w {dest_dir} {wheel}"
]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64"
inherit.before-all = "append"
before-all = [
  # "yum check-update",
  # "yum search blas", # look at what's available
  # netlib blas/lapack fallback compiles and tests (on aarch64) but is super slow
  # "((yum install -y openblas-devel) || (yum install -y blas-devel lapack-devel))",
  "yum install -y mpfr-devel openblas-devel"]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_aarch64"
inherit.before-all = "append"
before-all = [
  # "dnf update",
  "dnf search blas",
  "dnf install -y openblas-devel mpfr-devel"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
inherit.before-all = "append"
before-all = [
  #"apk update",
  "apk search -v '*blas*'", # look at what's available
  "apk add openblas-dev mpfr-dev"]

[[tool.cibuildwheel.overrides]]
select = "*linux*"
inherit.before-all = "append"
before-all = [
"git clone -b stable --depth 1 https://github.com/DrTimothyAldenDavis/SuiteSparse.git",
"cd SuiteSparse/SuiteSparse_config",
"make",
"make install",
"cd ../AMD",
"make",
"make install",
"cd ../COLAMD",
"make",
"make install",
"cd ../CAMD",
"make",
"make install",
"cd ../CCOLAMD",
"make",
"make install",
"cd ../CHOLMOD",
"make",
"make install",
"cd ../SPQR",
"make",
"make install",
"cd ../..",
"pkg-config --libs --cflags SPQR",
"pkg-config --libs --cflags CHOLMOD",
]